@@ -1,6 +1,6 @@
 Package: spgrass6
 Version: 0.7-4
-Date: 2011-08-18
+Date: 2011-08-28
 Title: Interface between GRASS 6+ geographical information system and R
 Author: Roger Bivand
 Maintainer: Roger Bivand <Roger.Bivand@nhh.no>
