@@ -11,11 +11,11 @@
   The functions provide an interface to GRASS commands run through \code{system}, based on the values returned by the \code{--interface description} flag using XML parsing. If required parameters are omitted, and have declared defaults, the defaults will be used.
 }
 \usage{
-execGRASS(cmd, flags = NULL, ..., parameters = NULL, intern = FALSE,
+execGRASS(cmd, ..., flags = NULL, parameters = NULL, intern = FALSE,
  ignore.stderr = NULL, Sys_ignore.stdout=FALSE, Sys_wait=TRUE,
  Sys_input=NULL, Sys_show.output.on.console=TRUE, Sys_minimized=FALSE,
- Sys_invisible=TRUE)
-doGRASS(cmd, flags = NULL, ..., parameters = NULL)
+ Sys_invisible=TRUE, echoCmd=NULL)
+doGRASS(cmd, ..., flags = NULL, parameters = NULL, echoCmd=NULL)
 parseGRASS(cmd)
 \method{print}{GRASS_interface_desc}(x, ...)
 getXMLencoding()
@@ -24,13 +24,14 @@ setXMLencoding(enc)
 %- maybe also 'usage' for other objects documented here.
 \arguments{
   \item{cmd}{GRASS command name}
-  \item{flags}{character vector of GRASS command flags}
+  \item{flags}{character vector of GRASS command flags; must be a named argument}
   \item{...}{for \code{execGRASS} and \code{doGRASS}, GRASS module parameters given as R named arguments directly. For the \code{print} method, other arguments to print method}
-  \item{parameters}{list of GRASS command parameters, used if GRASS parameters are not given as R arguments directly; the two methods for passing GRASS parameters may not be mixed}
+  \item{parameters}{list of GRASS command parameters, used if GRASS parameters are not given as R arguments directly; must be a named argument; the two methods for passing GRASS parameters may not be mixed}
   \item{intern}{a logical (not 'NA') which indicates whether to make the output of the command an R object. Not available unless 'popen' is supported on the platform}
   \item{ignore.stderr}{default NULL, taking the value set by \code{set.ignore.stderrOption}, a logical indicating whether error messages written to 'stderr' should be ignored}
   \item{Sys_ignore.stdout, Sys_wait, Sys_input}{pass extra arguments to \code{system}}
   \item{Sys_show.output.on.console, Sys_minimized, Sys_invisible}{pass extra arguments to \code{system} on Windows systems only}
+  \item{echoCmd}{default NULL, taking the logical value set by \code{set.echoCmdOption}, print GRASS command to be executed to console}
   \item{x}{object to be printed}
   \item{enc}{character string to replace UTF-8 in header of XML data generated by GRASS module --interface-description output when the internationalised messages are not in UTF-8 (known to apply to French, which is in latin1)}
 }
@@ -49,6 +50,8 @@ setXMLencoding(enc)
 
 \examples{
 if (nchar(Sys.getenv("GISRC")) > 0) {
+  oechoCmd <- get.echoCmdOption()
+  set.echoCmdOption(TRUE)
   print(parseGRASS("r.slope.aspect"))
   doGRASS("r.slope.aspect", flags=c("overwrite"),
     elevation="elevation.dem", slope="slope", aspect="aspect")
@@ -59,6 +62,7 @@ if (nchar(Sys.getenv("GISRC")) > 0) {
     distances=seq(1000,15000,1000))
   pars <- list(input="bugsites", output="bmap", distances=seq(1000,15000,1000))
   doGRASS("r.buffer", flags=c("overwrite"), parameters=pars)
+  set.echoCmdOption(oechoCmd)
 }
 }
 % Add one or more standard keywords, see file 'KEYWORDS' in the
